--- a/Style.css
+++ b/Style.css
@@ -1,11 +1,11 @@
-/* Définition des polices personnalisées */
 body
 {
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Raleway', sans-serif;/* Définition des polices personnalisées */
+
 }
 header 
 {
-    width: 76%;
+    width: 100%;
     height: auto;
     margin: auto;
 }
@@ -13,10 +13,11 @@ header
 {
     display: flex;
     align-items: center;
-    width: 100%;
+    width: 76%;
     height: auto;
     min-width: 280px;
     flex-wrap: wrap;
+    margin-left: 148px;
 }
 .hdr_tit_pri_logo_15
 {
@@ -63,22 +64,13 @@ nav
 {
     color: #101010; 
 }
-@media only screen and (max-width: 1000px)
+@media only screen and (max-width: 950px)
 {
-    header 
-    {
-        width: 100%;
-        height: 100px;
-        margin-bottom: 30px;
-    }
     .hdr_tit_pri_14 
     {
         width: 100%;
         height: 100px;
-    }
-    .hdr_tit_pri_logo_15 img
-    {
-        padding: 0 15px;
+        margin-left: 0px;
     }
 }
 .sec_27_P
@@ -132,11 +124,21 @@ nav
 }
 @media only screen and (max-width: 500px)
 {
+    header 
+    {
+        width: 100%;
+        height: 100px;
+        margin-bottom: 30px;
+    }
+    .hdr_tit_pri_logo_15 img
+    {
+        padding: 0 15px;
+    }
     nav
     {
         flex-grow: 1;
         order: 3;
-        height: 50px;
+        height: 60px;
     }
     .hdr_tit_pri_14
     {
@@ -145,10 +147,6 @@ nav
     .hdr_tit_pri_14 a:hover
     {
         border-top:none;
-    }
-    .mob 
-    {
-        padding-bottom: 10px;
     }
    .mob1 
     {
@@ -357,7 +355,7 @@ display: flex;
     {
         display: flex;
         width: 15px;
-        height: 15px;bloc_sec_58_P_fil
+        height: 15px;
         background-color: white;
         border-radius: 15px;
         justify-content:center;
@@ -461,8 +459,9 @@ display: flex;
 margin-left: 10px;
 margin-bottom: 0px;
 }
-/*Paramettre de sous section pop*/
-.sec_heb_74_D_b_p
+/*Paramettre du bloc plus populaires de la Deuxième section à partir de la ligne 76*/
+
+.sec_heb_176_D_b_p
 {
     display: flex;
     flex-direction: column;
@@ -473,13 +472,13 @@ margin-bottom: 0px;
     background-color: #f2f2f2;
     border-radius: 15px 15px 15px 15px;
 }
-.po1
+.sec_heb_177_D_b_p
 {
     display: flex;
     justify-content:space-between;
     width: 240px;
 }
-.po2, .po3, .po4
+.sec_heb_185_D_b_p,.sec_heb_201_D_b_p,.sec_heb_217_D_b_p
 {
     display: flex;
     align-items: center;
@@ -488,7 +487,7 @@ margin-bottom: 0px;
     border-radius: 15px 15px 15px 15px;
     background-color:white;
 }
-.p2,.p3,.p4
+.sec_heb_186_D_b_p,.sec_heb_202_D_b_p,.sec_heb_218_D_b_p
 {
     display: flex;
     border: 2px white solid;
@@ -499,13 +498,13 @@ margin-bottom: 0px;
     border-radius: 15px 0px 0px 15px;
     background-color:white;
 }
-.p2 img,.p3 img,.p4 img
+.sec_heb_186_D_b_p img,.sec_heb_202_D_b_p img,.sec_heb_218_D_b_p img
 {
     width: 105px;
     height: 90px;
     border-radius: 15px 0px 0px 15px;
 }
-.p22,.p33,.p44
+.sec_heb_191_D_b_p,.sec_heb_207_D_b_p,.sec_heb_223_D_b_p
 {
     border: 2px white solid;
     width: 130px;
@@ -515,28 +514,28 @@ margin-bottom: 0px;
     padding-bottom: 10px;
     line-height: 80%;
 }
-.p22 h1,.p33 h1,.p44 h1
+.sec_heb_191_D_b_p h1,.sec_heb_207_D_b_p h1,.sec_heb_223_D_b_p h1
 {
     font-size: 12px;
 }
-.p22 h2,.p33 h2,.p44 h2
+.psec_heb_191_D_b_p h2,.sec_heb_207_D_b_p h2,.sec_heb_223_D_b_p h2
 {
     font-size: 10px;
 }
-/*Paramettre de section 2*/
-.sec2
+/*Paramettre du bloc plus Activités à Marseille de la Troisième section à partir de la ligne 235*/
+.sec_235_T
 {
     display: flex;
     flex-direction: column;
     width: 100%;
     margin: auto;
 }
-.b_se1
+.sec_236_T
 {
     margin-top: 10px;
     padding-bottom:  10px;
 }
-.b_ele
+.sec_239_T
 {
     display: flex;
     justify-content: space-between;
@@ -544,95 +543,96 @@ margin-bottom: 0px;
     margin: auto;
 }
 /*1er bloc d'element avec 2 sous blocs*/
-.b_el1, .b_el3
+.sec_240_T, .sec_272_T
 {
     display: flex;
     flex-direction: column;
     border-radius: 15px 15px 15px 15px;
     box-shadow: 4px 4px 4px #f2f2f2 ;
 }
-.b_el11,.b_el33
+.sec_241_T,.sec_273_T
 {
     width: 197px;
     height: 230px;
     border-radius: 15px 15px 0px 0px;
 }
-.b_el11 img,.b_el33 img
+.sec_241_T img,.sec_273_T img
 {
     width: 197px;
     height: 230px;
     border-radius:15px 15px 0px 0px ;
 }
-.b_el111,.b_el333
+.sec_246_T,.sec_278_T
 {
     width: 197px;
     height: 30px;
     border-radius:0px 0px 15px 15px;
 }
-.b_el111 h2,.b_el333 h2,.b_e222 h2,.b_e444 h2,.b_222 h2,.b_444 h2
+.sec_246_T h2,.sec_278_T h2,.sec_257_T h2,.sec_267_T h2,.sec_289_T h2,.sec_299_T h2
 {
     margin-left: 10px;
 }
 /*2e bloc d'element avec 4 sous blocs*/
 
-.b_el2,.b_el4
+.sec_250_T,.sec_282_T
 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     border-radius: 15px 15px 15px 15px;
 }
-.b_e2,.b_e4
+.sec_251_T,.sec_283_T
 {
     display: flex;
     flex-direction: column;
     border-radius: 15px 15px 15px 15px;
     box-shadow: 4px 4px 4px #f2f2f2 ;
 }
-.b_e22,.b_e44
+.sec_252_T,.sec_284_T
 {
     width: 196px;
     height: 110px;
     border-radius: 15px 15px 0px 0px;
 }
-.b_e22 img,.b_e44 img
+.sec_252_T img,.sec_284_T img
 {
     width: 196px;
     height: 110px;
     border-radius: 15px 15px 0px 0px;
 }
-.b_e222,.b_e444
+.sec_257_T,.sec_289_T
 {
     width: 196px;
     height: 35px;
     border-radius: 0px 0px 15px 15px;
 }
-.b_2,.b_4
+.sec_261_T,.sec_293_T
 {
     display: flex;
     flex-direction: column;
     border-radius: 15px 15px 15px 15px;
     box-shadow: 4px 4px 4px #f2f2f2 ;
 }
-.b_22,.b_44
+.sec_262_T,.sec_294_T
 {
     width: 196px;
     height: 53px;
     border-radius: 15px 15px 0px 0px;
 }
-.b_22 img,.b_44 img
+.sec_262_T img,.sec_294_T img
 {
     width: 196px;
     height: 53px;
     border-radius: 15px 15px 0px 0px;
 }
-.b_222,.b_444
+.sec_267_T,.sec_299_T
 {
     width: 196px;
     height: 35px;
     border-radius: 0px 0px 15px 15px;
 }
-.bloc_footer
+.bloc_footer_307
+
 {
     width: 80%;
     height: auto;
@@ -649,20 +649,20 @@ footer
     padding-top: 35px;
     padding-bottom:35px ;
 }
-.bf_1,.bf_2,.bf_3
+.bf_309,.bf_315,.bf_320
 {
     display: flex;
     flex-direction: column;
     width: 18%;
     height: auto;
 }
-.bf_1,.bf_1 a,.bf_2,.bf_2 a,.bf_3,.bf_3 a
+.bf_309,.bf_309 a,.bf_315,.bf_315 a,.bf_320,.bf_320 a
 {
     font-size: 13px;
     color: black;
     text-decoration: none;
 }
-.bf_1 a:hover,.bf_2 a:hover,.bf_3 a:hover
+.bf_309 a:hover,.bf_315 a:hover,.bf_320 a:hover
 {
     color: blue;
 }
@@ -727,129 +727,124 @@ footer
     {
         font-size: 12px;
     }
-    .sec_heb_74_D_b_p
+    .sec_heb_176_D_b_p
     {
         width: 100%;
         margin: auto;
         padding-bottom: 15px;
     }
-    .po1,.po2,.po3,.po4 
+    .sec_heb_177_D_b_p,.sec_heb_185_D_b_p,.sec_heb_201_D_b_p,.sec_heb_217_D_b_p 
     {
         width: 90%;
         right: 100%;
         margin-top: 15px;
     }
-    .p2,.p22,.p3,.p33,.p4,.p44 
+    .sec_heb_186_D_b_p,.sec_heb_191_D_b_p,.sec_heb_202_D_b_p,.sec_heb_207_D_b_p,.sec_heb_218_D_b_p,.sec_heb_223_D_b_p 
     {
         width: 90%;
     }
-    .po2 img,.po3 img,.po4 img 
+    .sec_heb_186_D_b_p img,.sec_heb_202_D_b_p img,.sec_heb_218_D_b_p img 
     {
         width: 100%;
         right: 100%;
     }
-    .p2 a,.p3 a,.p4 a 
+    .sec_heb_186_D_b_p a,.sec_heb_202_D_b_p a,.sec_heb_218_D_b_p a 
     {
         width: 100%;
     }
-    .b_se1
+    .sec_236_T
     {
         padding-bottom:0px;
     }
-    .b_ele
+    .sec_239_T
     {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
     }
-    /*1er bloc d'element avec 2 sous blocs*/
-    .b_el1, .b_el3
+    /*1er lot d'element avec 2 sous blocs*/
+    .sec_240_T, .sec_272_T
     {
         width: 100%;
         height: 170px;
         margin-top: 15px;
     }
-    .b_el11,.b_el33
+    .sec_241_T,.sec_273_T
     {
         width: 99.8%;
         height: 78%;
     }
-    .b_el11 img,.b_el33 img
+    .sec_241_T img,.sec_273_T img
     {
         width: 99.8%;
         height: 100%;
     }
-    .b_el11 a,.b_el33 a 
+    .sec_241_T a,.sec_273_T a 
     {
         width: 100%;
     }
-        .b_el111,.b_el333
+    .sec_246_T,.sec_278_T
     {
         width: 99.8%;
         height: auto;
     }
-    .b_el111 h2,.b_el333 h2,.b_e222 h2,.b_e444 h2,.b_222 h2,.b_444 h2
-    {
-        margin-left: 10px;
-    }
-    /*2e bloc d'element avec 4 sous blocs*/
-    
-    .b_el2,.b_el4
+    /*2e lot d'element avec 4 sous blocs*/
+    .sec_250_T,.sec_282_T
     {
         width: 99.8%;
         height: 355px;
         margin-top: 15px;
     }
-    .b_e2,.b_e4
+    .sec_251_T,.sec_283_T
     {
         width: 100%;
         height: 170px;
         margin-bottom: 15px;
     }
-    .b_e22,.b_e44
+    .sec_252_T,.sec_284_T
     {
         width: 99.8%;
         height: 78%;
     }
-    .b_e22 img,.b_e44 img
+    .sec_252_T img,.sec_284_T img
     {
         width: 99.8%;
         height: 100%;
     }
-    .b_e22 a,.b_e44 a 
+    .sec_252_T a,.sec_284_T a 
     {
         width: 100%;
     }
-    .b_e222,.b_e444
+    .sec_257_T,.sec_289_T
     {
         width: 99.8%;
         height: auto;
     }
-    .b_2,.b_4
+    .sec_261_T,.sec_293_T
     {
         width: 99.8%;
         height: 170px;
     }
-    .b_22,.b_44
+    .sec_262_T,.sec_294_T
     {
         width: 99.8%;
         height: 80%;
     }
-    .b_22 img,.b_44 img
+    .sec_262_T img,.sec_294_T img
     {
         width: 99.8%;
         height: 100%;
     }
-    .b_22 a,.b_44 a 
+    .sec_262_T a,.sec_294_T a 
     {
         width: 100%;
     }
-    .b_222,.b_444
+    .sec_267_T,.sec_299_T
     {
         width: 99.8%;
         height: 35px;
     }
-    .bloc_footer
+    .bloc_footer_307
     {
         width: 100%;
         height: auto;
@@ -863,7 +858,7 @@ footer
         height: auto;
         justify-content: left;
     }
-    .bf_1,.bf_2,.bf_3
+    .bf_309,.bf_315,.bf_320
     {
         display: flex;
         flex-direction: column;
@@ -873,13 +868,13 @@ footer
         margin-bottom: 20px;
         margin-left: 25px;
     }
-    .bf_1,.bf_1 a,.bf_2,.bf_2 a,.bf_3,.bf_3 a
+    .bf_309,.bf_309 a,.bf_315,.bf_315 a,.bf_320,.bf_320 a
     {
         font-size: 18px;
         color: black;
         text-decoration: none;
     }
-    .bf_1 a:hover,.bf_2 a:hover,.bf_3 a:hover
+    .bf_309 a:hover,.bf_315 a:hover,.bf_320 a:hover
     {
         color: blue;
     }   
