--- a/Style.css
+++ b/Style.css
@@ -518,7 +518,7 @@ margin-bottom: 0px;
 {
     font-size: 12px;
 }
-.psec_heb_191_D_b_p h2,.sec_heb_207_D_b_p h2,.sec_heb_223_D_b_p h2
+.sec_heb_191_D_b_p h2,.sec_heb_207_D_b_p h2,.sec_heb_223_D_b_p h2
 {
     font-size: 10px;
 }
